edited list function implementation

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -31,5 +31,9 @@
       </section>
       <button type="submit">Sign in</button>
     </form>
+
+    <form action="users/logout" method="post">
+      <button type="submit">Logout</button>
+    </form>
   </body>
 </html>
